--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <div class="profile-image">
                         <div class="profile-circle">
-                            <img src="nobita.png" alt="Profile">
+                            <img src="nobita.jpeg" alt="Profile">
                         </div>
                     </div>
                 </div>
