--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <div class="profile-image">
                         <div class="profile-circle">
-                            <img src="nobita.jpeg" alt="Profile">
+                            <img src="1ef990a2-7927-4e25-8f71-12b1387bbff4.jpg" alt="Profile">
                         </div>
                     </div>
                 </div>
